Bug 315956 - Unexpected focus change with auto-(un)shade on mouse over.
Summary: Unexpected focus change with auto-(un)shade on mouse over.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: window-tabbing (other bugs)
Version First Reported In: 4.10.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 4.10.2
Assignee: KWin default assignee
URL:
Keywords:
: 316438 318228 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-01 14:29 UTC by o2029162
Modified: 2013-04-12 08:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description o2029162 2013-03-01 14:29:05 UTC
When two (or more) windows are tabbed and shaded (with the hover setting enabled), the foreground window focus cycles one tab right in the group each time they are shaded (the mouse leaves the window).

Reproducible: Always

Steps to Reproduce:
1. Open two windows and tab them
2. Shade and enable auto shade/unshade on mouse hover
3. Put the mouse on it and move it out
Actual Results:  
The next tab is the foreground window of the group

Expected Results:  
The foreground tab is the same as before

This is new in 4.10, it worked fine in 4.9.5
Comment 1 Thomas Lübking 2013-03-01 14:44:11 UTC
commit 7f513b9e286013486f422a7aac7b61f7d70265af
Author: Thomas Lübking <thomas.luebking@gmail.com>
Date:   Thu Nov 8 22:26:09 2012 +0100

    activateNextClient precedence for next client in tabgroup
    
    BUG: 309765
    FIXED-IN: 4.10
    REVIEW: 107258


precedence should be bypassed for shaded clients.
Comment 2 Thomas Lübking 2013-03-05 19:18:53 UTC
Git commit f40d7a41e78bf229e2a7fa7d921e77157dc01ac8 by Thomas Lübking.
Committed on 01/03/2013 at 21:08.
Pushed by luebking into branch 'KDE/4.10'.

Only prefer current tabgroup if it's shown
FIXED-IN:4.10.2

M  +1    -1    kwin/activation.cpp

http://commits.kde.org/kde-workspace/f40d7a41e78bf229e2a7fa7d921e77157dc01ac8
Comment 3 Thomas Lübking 2013-03-05 19:19:28 UTC
Git commit e9fe7e9072cd56cbcf8e41787929ccceace5bd45 by Thomas Lübking.
Committed on 01/03/2013 at 21:08.
Pushed by luebking into branch 'master'.

Only prefer current tabgroup if it's shown
FIXED-IN:4.10.2

M  +1    -1    kwin/activation.cpp

http://commits.kde.org/kde-workspace/e9fe7e9072cd56cbcf8e41787929ccceace5bd45
Comment 4 Thomas Lübking 2013-03-09 23:53:43 UTC
*** Bug 316438 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Lübking 2013-04-12 08:38:42 UTC
*** Bug 318228 has been marked as a duplicate of this bug. ***