Only prefer current tabgroup if it's shown

BUG: 315956
FIXED-IN:4.10.2